--- a/src/components/Square/Square.module.css
+++ b/src/components/Square/Square.module.css
@@ -31,3 +31,33 @@
     height: 32px;
     border: 19px solid #EF9919;
 }
+
+.horizontalLine,
+.verticalLine,
+.diagonalLineLeft,
+.diagonalLineRight {
+    position: absolute;
+    z-index: 5;
+    border: 3px solid #fff;
+    border-radius: 10px;
+}
+
+.horizontalLine {
+    width: 105%;
+    transform: rotate(360deg);
+}
+
+.verticalLine {
+    width: 105%;
+    transform: rotate(270deg);
+}
+
+.diagonalLineLeft {
+    width: 145%;
+    transform: rotate(45deg);
+}
+
+.diagonalLineRight {
+    width: 145%;
+    transform: rotate(-45deg);
+}
