--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -82,6 +82,46 @@
     overflow-y: auto;
 }
 
+.message {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    max-width: 85%;
+    padding: 4px 12px;
+    border-radius: 10px;
+    margin-bottom: 35px;
+    word-break: break-all;
+}
+
+.message.firstPlayer {
+    background-color: #00AE1C;
+    justify-content: flex-end;
+    align-self: flex-end;
+}
+
+.message.secondPlayer {
+    background-color: #737373;
+    justify-content: flex-start;
+    align-self: flex-start;
+}
+
+.message span {
+    display: flex;
+    justify-content: flex-start;
+    line-height: calc(20 / 16);
+    font-size: 16px;
+    padding-right: 25px;
+    overflow-wrap: break-word;
+}
+
+.time {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: calc(16 / 12);
+}
+
 .inputField {
     position: absolute;
     bottom: 0;
