--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,6 @@
 .App {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
-    width: 1440px;
     background-color: #171717;
     color: #fff;
     line-height: .3px;
@@ -26,4 +25,5 @@
 main {
     display: flex;
     justify-content: space-around;
+    width: 100vw;
 }
