--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -72,3 +72,47 @@ h3.losingColor {
     box-shadow: inset 0 0 6px 1px #000;
     transition: box-shadow .15s ease;
 }
+
+@media (max-width: 1280px) {
+    .board h3 {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .board h3 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .board h3 {
+        font-size: 14px;
+    }
+
+    .square {
+        width: 200px;
+        height: 200px;
+    }
+
+    .square button {
+        width: 59px;
+        height: 59px;
+    }
+}
+
+@media (max-width: 480px) {
+    .board h3 {
+        font-size: 12px;
+    }
+
+    .square {
+        width: 130px;
+        height: 130px;
+    }
+
+    .square button {
+        width: 38px;
+        height: 38px;
+    }
+}
