--- a/src/components/Score/Score.module.css
+++ b/src/components/Score/Score.module.css
@@ -36,3 +36,30 @@ header span {
     box-shadow: inset 0 0 4px 2px #fff;
     transition: box-shadow .2s ease;
 }
+
+@media (max-width: 768px) {
+    header {
+        justify-content: space-between;
+        padding: 35px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        padding: 15px;
+    }
+
+    header span {
+        font-size: 12px;
+    }
+
+    .score span {
+        font-size: 20px;
+        margin: 0 15px;
+    }
+
+    .score button {
+        width: 61px;
+        height: 30px;
+    }
+}
